--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,4 @@
+workspace = { members = ["move_to_fnut"] }
 [package]
 name = "wgpu_winit_egui_web"
 version = "0.1.0"
@@ -7,10 +8,21 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-pollster = { version = "0.3.0", features = ["macro"] }
+tracing = { version = "0.1.40", features = ["log"] }
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tracing-wasm = "0.2.1"
 wgpu = "0.19.1"
 winit = "0.29.10"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
+console_log = "1.0.0"
+console_error_panic_hook = "0.1.7"
+#fern = "0.6.2"
+log = "0.4.20"
 wasm-bindgen = "0.2.91"
+wasm-bindgen-futures = "0.4.41"
 web-sys = { version = "=0.3.67" }
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+pollster = { version = "0.3.0", features = ["macro"] }
+#nv_logger = "0.11.2"
