Encapsulate rendering in struct

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,16 +13,12 @@ wgpu = "0.19.1"
 winit = "0.29.10"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-console_log = "1.0.0"
 console_error_panic_hook = "0.1.7"
-fern = "0.6.2"
-log = "0.4.20"
-#tracing-wasm = "0.2.1"
-#tracing-wasm = { path = "/home/zach/allotropic/tracing-wasm" }
+#tracing-wasm = { git = "https://github.com/zthompson47/tracing-wasm.git", branch = "formatting" }
+tracing-wasm = { path = "/home/zach/allotropic/tracing-wasm" }
 wasm-bindgen = "0.2.91"
 wasm-bindgen-futures = "0.4.41"
 web-sys = { version = "=0.3.67" }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 pollster = { version = "0.3.0", features = ["macro"] }
-#nv_logger = "0.11.2"
